# Pietric

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Graph.h  IRBuilder.h  ImageLoader.h  Parser.h  PietTypes.h  StackVM.h  Utils.h
src/: Graph.cpp  IRBuilder.cpp  ImageLoader.cpp  Parser.cpp  StackVM.cpp  Utils.cpp  main.cpp
